New bugs identified fixed.

--- a/src/app/components/admin-user/admin-user.component.css
+++ b/src/app/components/admin-user/admin-user.component.css
@@ -17,7 +17,7 @@
   p-dropdown
   > .p-dropdown {
   border-bottom: none !important;
-  width: auto;
+  width: min-content !important;
 }
 
 .table-users
