--- a/src/app/components/admin-user/admin-user.component.html
+++ b/src/app/components/admin-user/admin-user.component.html
@@ -77,7 +77,7 @@
               type="button"
               pSaveEditableRow
               (click)="onRowEditSave(rowData, rowIndex)"
-              class="iconbutton-neumorphism margin-rt"
+              class="iconbutton-neumorphism"
             >
               <i class="pi pi-check"></i>
             </button>
