--- a/src/app/partials/settings/settings.component.html
+++ b/src/app/partials/settings/settings.component.html
@@ -321,7 +321,7 @@
 
             <div class="txt-center" [ngClass]="url ? 'show' : 'hide'">
               <small
-                class="color-rd"
+                class="color-rd margin-lt"
                 *ngIf="url && !templateName && !tglPrevTemplate"
                 >Before saving the recording, you must name this
                 template.</small
