--- a/src/app/components/admin-roles/admin-roles.component.html
+++ b/src/app/components/admin-roles/admin-roles.component.html
@@ -77,7 +77,7 @@
               type="button"
               pSaveEditableRow
               (click)="onRowEditSave(rowData, rowIndex)"
-              class="iconbutton-neumorphism margin-rt"
+              class="iconbutton-neumorphism"
             >
               <i class="pi pi-check"></i>
             </button>
@@ -129,13 +129,7 @@
                 </ng-container>
               </ng-template>
               <ng-template pTemplate="output">
-                <ng-container
-                  [ngSwitch]="col.field === 'permissions' ? 'permissions' : -1"
-                >
-                  <ng-container *ngSwitchDefault>
-                    {{ rowData[col.field] }}
-                  </ng-container>
-                </ng-container>
+                {{ rowData[col.field] | formatArray }}
               </ng-template>
             </p-cellEditor>
           </td>
