--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -358,5 +358,7 @@
 }
 
 .create-template ::ng-deep .p-dropdown-items-wrapper {
-  max-width: 11rem;
+  max-width: 100%;
+  max-height: 11rem !important;
+  background: #e6e7ee;
 }
