--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -723,7 +723,7 @@ input:checked + .toggle-slider-neumorphism::before {
   .p-accordion-header:not(.p-highlight):not(.p-disabled):hover
   .p-accordion-header-link {
   background-color: #e0e1e9;
-  animation: pulse 3s infinite;
+  animation: none;
   text-decoration: none;
 }
 
@@ -738,16 +738,16 @@ input:checked + .toggle-slider-neumorphism::before {
   .p-accordion
   .p-accordion-header:not(.p-disabled)
   .p-accordion-header-link:focus {
-  box-shadow: 2px 2px 5px #b8b9be;
+  box-shadow: none;
   border: 0.0625rem solid #d1d9e6;
   background-color: #e0e1e9;
   color: #44476a;
-  animation: pulse 3s infinite;
   outline: none;
+  text-decoration: none;
 }
 
 ::ng-deep .p-accordion .p-accordion-header .p-accordion-header-link {
-  box-shadow: 2px 2px 5px #b8b9be;
+  box-shadow: none;
   border: 0.0625rem solid #d1d9e6;
   background: #e6e7ee;
   color: #44476a;
@@ -791,7 +791,7 @@ input:checked + .toggle-slider-neumorphism::before {
 }
 
 ::ng-deep.p-multiselect {
-  width: 100%;
+  width: min-content;
 }
 
 ::ng-deep.p-multiselect {
