--- a/src/app/partials/call-information/call-information.component.html
+++ b/src/app/partials/call-information/call-information.component.html
@@ -20,3 +20,4 @@
 </div>
 <p-scrollTop [threshold]="200"></p-scrollTop>
 <p-confirmDialog rejectLabel="Cancel" acceptLabel="Accept"></p-confirmDialog>
+<p-toast life="5000" position="top-center"></p-toast>
