--- a/src/app/partials/messenger/messenger.component.css
+++ b/src/app/partials/messenger/messenger.component.css
@@ -172,14 +172,11 @@
 .chats-view .col-lg-6 {
   padding: 0.5rem;
   text-align: center;
-  border: 0.1rem solid #d1d9e6;
 }
 
-.chat-p {
+.chats-view {
+  border: 0.0625rem solid #d1d9e6;
   border-top-left-radius: 1rem;
-}
-
-.chat-a {
   border-top-right-radius: 1rem;
 }
 
@@ -211,7 +208,7 @@
   box-shadow: 2px 2px 5px #b8b9be, -1px -1px 10px #fff;
 }
 
-::ng-deep .p-accordion .p-accordion-content {
+.accordion-chat ::ng-deep .p-accordion .p-accordion-content {
   padding: 0 !important;
   border-bottom: none !important;
 }
@@ -343,6 +340,8 @@
 
 .view-active {
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 .small-sms {
@@ -423,7 +422,7 @@
   background: #e0e1e9;
 }
 
-::ng-deep .p-dialog {
+.messenger-component ::ng-deep .p-dialog {
   width: 25rem !important;
 }
 
