Working on admin-template. 2 new default fields added. Missing some functions to be connected to DB.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -82,6 +82,6 @@
 </div>
 
 <!-- Angular components -->
-<div class="container-fluid">
+<div class="container-fluid no-padding-lt no-padding-rt">
   <router-outlet (activate)="onActivate($event)"></router-outlet>
 </div>
