--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -361,4 +361,15 @@
   max-width: 100%;
   max-height: 11rem !important;
   background: #e6e7ee;
+  font-weight: normal !important;
+}
+
+.type-container ::ng-deep .p-checkbox,
+::ng-deep .p-checkbox-label {
+  margin-bottom: 1.25rem;
+}
+
+::ng-deep .cdk-overlay-pane {
+  left: 558.922px;
+  min-width: 146.703px;
 }
