--- a/src/app/components/admin-template/admin-template.component.html
+++ b/src/app/components/admin-template/admin-template.component.html
@@ -49,7 +49,11 @@
 
               <div
                 class="form-row"
-                *ngFor="let item of items; let indexSection = index"
+                *ngFor="
+                  let item of items;
+                  let indexSection = index;
+                  let first = first
+                "
               >
                 <div
                   class="col-lg-6 width-100 no-padding-rt no-padding-lt field-container"
@@ -57,9 +61,9 @@
                   <mat-form-field appearance="standard">
                     <mat-label>Field name</mat-label>
                     <input
-                      [readonly]="indexSection == 0"
+                      [readonly]="indexSection <= 2"
                       [ngClass]="{
-                        'input-disabled-neumorphism ': indexSection == 0
+                        'input-disabled-neumorphism ': indexSection <= 2
                       }"
                       matInput
                       class="input-neumorphism width-100"
@@ -75,10 +79,30 @@
                   class="col-lg-6 width-100 no-padding-rt no-padding-lt type-container"
                 >
                   <div class="form-check form-check-inline width-100">
-                    <p-dropdown
-                      [readonly]="indexSection == 0"
+                    <mat-form-field appearance="fill">
+                      <mat-label>Field type</mat-label>
+                      <mat-select
+                        [disableRipple]="true"
+                        [ngClass]="{
+                          'input-disabled-neumorphism ': indexSection <= 2
+                        }"
+                        class="input-neumorphism width-100 margin-rt"
+                        placeholder="Field type"
+                        formControlName="fieldType{{ indexSection }}"
+                      >
+                        <mat-option
+                          *ngFor="let type of selectElmType"
+                          [value]="type.typeCode"
+                        >
+                          {{ type.typeName }}
+                        </mat-option>
+                      </mat-select>
+                    </mat-form-field>
+
+                    <!-- <p-dropdown
+                      [readonly]="indexSection <= 2"
                       [ngClass]="{
-                        'input-disabled-neumorphism ': indexSection == 0
+                        'input-disabled-neumorphism ': indexSection <= 2
                       }"
                       [options]="selectElmType"
                       class="input-neumorphism width-100 margin-rt"
@@ -86,20 +110,24 @@
                       optionValue="typeCode"
                       placeholder="Field type"
                       formControlName="fieldType{{ indexSection }}"
-                    ></p-dropdown>
+                    ></p-dropdown> -->
                     <p-checkbox
                       [binary]="true"
                       label="Visible"
                       class="margin-rt"
                       checked="true"
-                      [readonly]="indexSection == 0"
+                      [readonly]="indexSection <= 2"
                       [ngClass]="{
-                        'input-disabled-neumorphism ': indexSection == 0
+                        'input-disabled-neumorphism ': indexSection <= 2
                       }"
                       formControlName="fieldVisible{{ indexSection }}"
                     ></p-checkbox>
                     <button
-                      [ngClass]="indexSection == 0 ? 'hide' : 'show'"
+                      [ngClass]="
+                        indexSection <= 2 || indexSection == 3
+                          ? 'not-visible'
+                          : 'visible'
+                      "
                       matTooltip="Remove this section field"
                       matTooltipPosition="above"
                       class="iconbutton-neumorphism"
@@ -238,7 +266,7 @@
                 </button>
                 <button
                   class="width-50 show-line-b txt-center button-neumorphism"
-                  (click)="cancelCreateNewTemplate()"
+                  (click)="cleanCreateNewTemplate()"
                 >
                   Cancel
                 </button>
@@ -256,10 +284,14 @@
       class="template-container col-lg-12"
       [ngClass]="td.templateStatus ? 'template-div-active' : ''"
     >
-      <p-accordion>
+      <p-accordion
+        [activeIndex]="indexAccordion"
+        (onOpen)="onTabOpen(indexTemplate)"
+        (onClose)="onTabClose(indexTemplate)"
+      >
         <p-accordionTab [ngClass]="td.templateStatus ? 'template-active' : ''">
           <ng-template pTemplate="header">
-            <div class="row width-100" (click)="toggleTemplate(indexTemplate)">
+            <div class="row width-100">
               <div class="col-sm-6 template-label-container">
                 {{ td.templateName }}
                 <p-badge
@@ -269,7 +301,7 @@
                 ></p-badge>
               </div>
               <div
-                class="col-sm-6 d-flex justify-content-end not-visible"
+                class="col-sm-6 d-flex justify-content-end not-visible buttons-template"
                 id="buttons{{ indexTemplate }}"
               >
                 <button
@@ -703,5 +735,3 @@
   <p-confirmDialog rejectLabel="Cancel" acceptLabel="Accept"></p-confirmDialog>
   <p-toast life="5000" position="top-center"></p-toast>
 </div>
-
-<!-- <reusableTable-component [thData]="thFullData" [tdData]="tdData" [addNew]="addNew" [showBtnAddNew]="true"></reusableTable-component> -->
