--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -307,7 +307,7 @@ input:checked + .toggle-slider-neumorphism::before {
   border-radius: 1rem !important;
 }
 
-::ng-deep.mat-select-panel :nth-child(2) {
+::ng-deep.mat-select-panel :first-child {
   border-top-left-radius: 1rem !important;
   border-top-right-radius: 1rem !important;
 }
@@ -361,10 +361,6 @@ input:checked + .toggle-slider-neumorphism::before {
 
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-infix {
   width: 12rem !important;
-}
-
-::ng-deep .cdk-overlay-pane {
-  transform: translateX(-6px) translateY(0px) !important;
 }
 
 .dropdown {
@@ -1193,4 +1189,50 @@ textarea:focus-visible {
   outline-offset: 0;
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
   background: #e6e7ee;
+}
+
+::ng-deep .mat-form-field-type-mat-select .mat-form-field-label-wrapper {
+  top: -0.5rem;
+  padding-top: 0;
+  text-align: left !important;
+  font-weight: normal !important;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
+  border: none !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+
+::ng-deep .mat-select-arrow-wrapper {
+  height: 0px !important;
+}
+
+::ng-deep
+  .mat-form-field-type-mat-select.mat-form-field-appearance-fill.mat-form-field-can-float.mat-form-field-should-float
+  .mat-form-field-label {
+  transform: translateY(-1.7rem) scale(0.9) !important;
+  width: 40.333333% !important;
+}
+
+::ng-deep .mat-form-field .mat-select.mat-select-invalid .mat-select-arrow {
+  color: #a91e2c !important;
+}
+
+::ng-deep .mat-form-field-type-mat-select.mat-form-field-appearance-fill {
+  top: -15px;
+}
+
+::ng-deep .mat-select.input-neumorphism {
+  height: 2.42rem;
+  border-radius: 1.1rem;
+}
+
+::ng-deep .mat-form-field-type-mat-select .mat-form-field-label {
+  left: 1.4rem;
+}
+
+::ng-deep .p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-focus {
+  box-shadow: none;
+  border-color: #d1d9e6;
 }
