--- a/src/app/partials/login/login.component.css
+++ b/src/app/partials/login/login.component.css
@@ -65,8 +65,10 @@
 }
 
 .logo {
-  width: 15rem;
-  height: 15rem;
+  width: 24rem;
+  height: 12rem;
+  margin-top: 13%;
+  margin-bottom: 7%;
 }
 
 .logo-container {
@@ -85,12 +87,14 @@
   box-shadow: 2px 2px 5px #b8b9be;
 }
 
-::ng-deep.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-focus {
+.loginForm
+  ::ng-deep.p-checkbox:not(.p-checkbox-disabled)
+  .p-checkbox-box.p-focus {
   box-shadow: 2px 2px 5px #b8b9be !important;
   border-color: #d1d9e6 !important;
 }
 
-::ng-deep .p-checkbox-label {
+.loginForm ::ng-deep .p-checkbox-label {
   margin-bottom: 0 !important;
   color: #44476a;
 }
